--- a/ConnectFour/style.css
+++ b/ConnectFour/style.css
@@ -7,6 +7,7 @@
 }
 body{
     overflow-x: hidden;
+    /* background-image: url(images/home-background.jpg); */
 }
 
 .background{
@@ -38,7 +39,7 @@ body{
     margin-top: 150px;
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.9);
-    height: 400px;
+    height: auto;
     width: 400px;
     border-radius: 20px;
     z-index: 1;
@@ -102,20 +103,22 @@ li{
     height: auto;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.8);
-    margin-top: 10px;
+    border:1px solid #B6B1B1;
+    box-shadow: 4px 0 4px rgba(0, 0, 0, 0.9);
+    margin-top: 20px;
     margin-left: 5px;
     border-radius: 10px;
 }
 .mssg-area{
     /* background-color: rgba(255,255,255,0.8); */
     width:100%;
-    min-height:300px;
-    max-height:330px;
+    min-height:320px;
+    max-height:325px;
     overflow-y: auto;
     /* display: flex;
     flex-direction: column-reverse; */
-    border-radius: 10px 10px 0 0;
-    box-shadow: 4px 0 4px rgba(0, 0, 0, 0.9);
+    /* border-radius: 10px 10px 0 0;
+    box-shadow: 4px 0 4px rgba(0, 0, 0, 0.9); */
 }
 ::-webkit-scrollbar{
     margin: 5px;
@@ -148,7 +151,7 @@ li{
 }
 .msgtxt{
     margin: 9px;
-    background-color: #FFF5EE;
+    background-color: rgb(222, 49, 99,0.1);
     padding: 10px;
     border-radius: 10px;
 }
@@ -156,8 +159,8 @@ li{
     height: 540px;
     width: 580px;       
     background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.9);
-    border: 2px solid white;
+    /* box-shadow: 4px 4px 4px rgba(222, 49, 99, 0.9); */
+    border:3px solid #DE3163;
     border-radius: 10px;
     margin: 0 auto;
     display: flex;
@@ -186,7 +189,7 @@ li{
     
 }
 i{
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     color: #DE3163;
 }
 #profile_picture{
@@ -254,7 +257,7 @@ input[type="password"]{
 .icon-description{
     height: auto;
     width: 100%;
-    border: 1px solid white;
+    border: 1px solid #B6B1B1;
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.9);
     border-radius: 10px;
@@ -284,6 +287,9 @@ input[type="password"]{
 }
 .online_name{
     font-size: 15px;
+}
+#feed{
+    background-image: url(images/home-background.jpg);
 }
 
 
@@ -368,6 +374,10 @@ input[type="password"]{
     .msgtxt{
         margin: 5px;
     }
+    #feedback{
+        height:auto;
+    }
+
 
 }
 
